# SlicerParallelProcessing

./: CMakeLists.txt  README.md
Processes/: CMakeLists.txt  Processes.py
Processes/Resources/ProcessScripts/: modelFilter.slicer.py  volumeFilter.slicer.py
